--- a/NuageAlarms/app/src/main/res/layout/activity_alarmlist.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_alarmlist.xml
@@ -19,29 +19,63 @@
             android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
     />
     <Spinner
-            android:layout_width="133dp"
-            android:layout_height="wrap_content"
+            android:layout_width="159dp"
+            android:layout_height="32dp"
             android:id="@+id/entityDropDown"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
-    <TextView
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.287" android:spinnerMode="dropdown"
+            android:foregroundTint="@color/colorPrimaryDark"/>
+    <EditText
             android:layout_width="159dp"
-            android:layout_height="53dp"
+            android:layout_height="37dp"
             android:id="@+id/filterText"
-            app:layout_constraintStart_toEndOf="@+id/entityDropDown"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"
-            android:textColor="@color/colorCommonText"/>
+            android:textColor="@color/colorCommonText" android:inputType="textShortMessage"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@+id/entityDropDown" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/addButton" app:layout_constraintHorizontal_bias="1.0"
+    />
     <android.support.v7.widget.RecyclerView
-            android:layout_width="365dp"
-            android:layout_height="118dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/filterText" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0" android:id="@+id/filterRecView"/>
+            android:layout_width="0dp"
+            android:layout_height="105dp"
+            android:scrollbars="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp" android:id="@+id/filterRecView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/filterText"
+            android:backgroundTintMode="src_over" android:background="@color/colorViewBackground"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="@string/button_add"
-            android:layout_width="73dp"
-            android:layout_height="39dp"
-            android:id="@+id/addButton" app:layout_constraintStart_toEndOf="@+id/filterText"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
+            android:layout_width="72dp"
+            android:layout_height="69dp"
+            android:id="@+id/addButton"
+            android:textSize="10sp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="148dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/mainTitle"
+            app:layout_constraintStart_toEndOf="@+id/entityDropDown" app:layout_constraintHorizontal_bias="0.0"
+            android:elevation="0dp"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="169dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/allEntitiesSubTitle"
+            android:scrollbars="horizontal|vertical" android:background="@color/colorViewBackground"
+            android:id="@+id/entityRecView"
+    />
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/allEntitiesSubTitle" android:textSize="18sp"
+            android:text="@string/existing_entities" android:textColor="@color/colorText"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/filterRecView" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.062"/>
 </android.support.constraint.ConstraintLayout>
