--- a/NuageAlarms/app/src/main/res/layout/activity_home.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_home.xml
@@ -14,13 +14,13 @@
             android:textColor="@color/colorText" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/subTitle"
             app:layout_constraintVertical_bias="0.0"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/subTitle" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/subTitle" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.498"
             android:textColor="@color/colorText"
