--- a/NuageAlarms/app/src/main/res/layout/activity_login.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_login.xml
@@ -6,89 +6,137 @@
         android:layout_height="match_parent"
         android:background="@color/colorBackground">
 
-    <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="43dp"
-            android:id="@+id/mainTitle" android:textSize="30sp"
-            android:textColor="@color/colorText"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/companyName" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintVertical_bias="0.0"/>
-    <TextView
-            android:text="@string/companyname"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:id="@+id/companyName" android:textSize="24sp"
-            android:textColor="@color/colorText"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintBottom_toTopOf="@+id/companyNameInput" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/companyNameInput"
-            android:hint="@string/companyname_hint"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/userName" android:text="csp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <TextView
-            android:text="@string/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/userName" android:textSize="24sp"
-            android:textColor="@color/colorText" app:layout_constraintBottom_toTopOf="@+id/userNameInput"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/userNameInput"
-            android:hint="@string/username_hint" android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/passWord" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:text="admin" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <TextView
-            android:text="@string/password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/passWord" android:textSize="24sp"
-            android:textColor="@color/colorText" app:layout_constraintBottom_toTopOf="@+id/passWordInput"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/passWordInput" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/enterButton" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:text="CcezDSxzglEqO4VS" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <Button
-            android:text="@string/button_enter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/enterButton" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.83"/>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_username"
+                    android:id="@+id/imageView2"
+                    app:layout_constraintEnd_toStartOf="@+id/userNameInput"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/userNameInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/userNameInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
+            <TextView
+                    android:text="@string/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userName" android:textSize="24sp"
+                    android:textColor="@color/colorText"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/companyNameInput"/>
+            <ImageView
+                    android:layout_width="278dp"
+                    android:layout_height="192dp" app:srcCompat="@drawable/nuage_v_colour_rgb_large"
+                    android:id="@+id/imageView4"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"
+            />
+            <TextView
+                    android:text="@string/companyname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:id="@+id/companyName" android:textSize="24sp"
+                    android:textColor="@color/colorText"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/userNameInput"
+                    android:hint="@string/username_hint"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:text="admin"
+                    app:layout_constraintTop_toBottomOf="@+id/userName"/>
+            <TextView
+                    android:text="@string/password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/passWord" android:textSize="24sp"
+                    android:textColor="@color/colorText"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/userNameInput"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_company"
+                    android:id="@+id/imageView"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/companyNameInput"
+                    app:layout_constraintTop_toTopOf="@+id/companyNameInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/companyNameInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
+            <Button
+                    android:text="@string/button_enter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="37dp"
+                    android:id="@+id/enterButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
+                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/passWordInput"
+                    android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_password"
+                    android:id="@+id/imageView3"
+                    app:layout_constraintEnd_toStartOf="@+id/passWordInput"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/passWordInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/passWordInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
+            <TextView
+                    android:text="@string/app_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="43dp"
+                    android:id="@+id/mainTitle" android:textSize="30sp"
+                    android:textColor="@color/colorText"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toTopOf="parent"
+            />
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/companyNameInput"
+                    android:hint="@string/companyname_hint"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="csp"
+                    app:layout_constraintTop_toBottomOf="@+id/companyName"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:id="@+id/passWordInput"
+                    android:text="CcezDSxzglEqO4VS"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/passWord"/>
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
