--- a/NuageAlarms/app/src/main/res/layout/activity_main.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_main.xml
@@ -7,68 +7,102 @@
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
         tools:context=".MainActivity">
-    <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="43dp"
-            android:id="@+id/mainTitle" android:textSize="30sp"
-            android:textColor="@color/colorText" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/serverNameIp"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"/>
-    <TextView
-            android:text="@string/server_name_ip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/serverNameIp" android:textSize="24sp"
-            android:textColor="@color/colorText"
-            app:layout_constraintBottom_toTopOf="@+id/serverNameIpInput" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
-    <EditText
-            android:layout_width="245dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/serverNameIpInput" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/serverPort" android:hint="@string/name_ip_input"
-            android:textStyle="italic" android:text="NokiaServer/124.252.253.203" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.992"/>
-    <TextView
-            android:text="@string/server_port"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/serverPort" android:textSize="24sp"
-            android:textColor="@color/colorText" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/serverPortInput"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/serverPortInput" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
-            app:layout_constraintBottom_toTopOf="@+id/enterButton"
-            android:text="8443" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.928"/>
-    <Button
-            android:text="@string/button_enter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/enterButton" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.737"/>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_port"
+                    android:id="@+id/imageView8"
+                    app:layout_constraintTop_toTopOf="@+id/serverPortInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/serverPortInput"
+                    app:layout_constraintEnd_toStartOf="@+id/serverPortInput"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintHorizontal_bias="1.0"/>
+            <TextView
+                    android:text="@string/app_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="43dp"
+                    android:id="@+id/mainTitle" android:textSize="30sp"
+                    android:textColor="@color/colorText" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
+            />
+            <Button
+                    android:text="@string/button_enter"
+                    android:layout_height="38dp"
+                    android:id="@+id/enterButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
+                    android:layout_width="81dp" android:layout_marginTop="24dp" android:layout_marginBottom="32dp"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            <TextView
+                    android:text="@string/server_port"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/serverPort" android:textSize="24sp"
+                    android:textColor="@color/colorText" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/serverNameIpInput"/>
+            <TextView
+                    android:text="@string/server_name_ip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/serverNameIp" android:textSize="24sp"
+                    android:textColor="@color/colorText"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView12"/>
+            <EditText
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/serverNameIpInput" android:layout_marginStart="85dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="85dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:hint="@string/name_ip_input"
+                    android:textStyle="italic" android:text="NokiaServer/124.252.253.203"
+                    app:layout_constraintTop_toBottomOf="@+id/serverNameIp"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_server"
+                    android:id="@+id/imageView7"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/serverNameIpInput"
+                    app:layout_constraintTop_toTopOf="@+id/serverNameIpInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/serverNameIpInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
+            <ImageView
+                    android:layout_width="278dp"
+                    android:layout_height="192dp" app:srcCompat="@drawable/nuage_v_colour_rgb_large"
+                    android:id="@+id/imageView12"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/serverPortInput" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
+                    android:text="8443"
+                    app:layout_constraintTop_toBottomOf="@+id/serverPort"/>
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
