--- a/NuageAlarms/app/src/main/res/layout/layout_filteritem.xml
+++ b/NuageAlarms/app/src/main/res/layout/layout_filteritem.xml
@@ -1,19 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
-    <TextView
-            android:text="TextView"
-            android:layout_width="131dp"
-            android:layout_height="31dp"
-            android:id="@+id/entityText" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"
-            android:textColor="@color/colorFilterText"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="234dp"
-            android:layout_height="31dp"
-            android:id="@+id/filterText" app:layout_constraintTop_toTopOf="parent"
-            android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/entityText"
-            android:layout_marginStart="8dp" android:textColor="@color/colorCommonText"/>
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
+                                             android:scrollbars="horizontal">
+    <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:scrollbarThumbHorizontal="@null" android:scrollbars="none"
+            android:id="@+id/filterItemScroll">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" android:id="@+id/filterItemLayout">
+
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="70dp"
+                    android:layout_height="21dp"
+                    android:id="@+id/entityText"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorFilterText"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.03" app:layout_constraintVertical_bias="0.0"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="302dp"
+                    android:layout_height="21dp"
+                    android:id="@+id/filterText"
+                    app:layout_constraintStart_toEndOf="@+id/entityText"
+                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorCommonText"
+                    android:textSize="14sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"/>
+        </android.support.constraint.ConstraintLayout>
+    </HorizontalScrollView>
+
 </android.support.constraint.ConstraintLayout>
