--- a/NuageAlarms/app/src/main/res/values/colors.xml
+++ b/NuageAlarms/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#CA2061</color>
     <color name="colorBackground">#FFFFFF</color>
+    <color name="colorViewBackground">#CFCECE</color>
     <color name="colorText">#C41414</color>
     <color name="colorFilterText">#D13109</color>
     <color name="colorCommonText">#000000</color>
+    <color name="colorButton">#464545</color>
 </resources>
