Implementing remember me feature.

--- a/NuageAlarms/app/src/main/res/values/colors.xml
+++ b/NuageAlarms/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorFilterText">#D13109</color>
     <color name="colorCommonText">#000000</color>
     <color name="colorButton">#464545</color>
+    <color name="progressCircle">#FF5722</color>
 </resources>
