--- a/NuageAlarms/app/src/main/res/layout/activity_login.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_login.xml
@@ -89,9 +89,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintHorizontal_bias="0.498"
                     style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
-                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/passWordInput"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/checkBox"
                     android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
             <ImageView
                     android:layout_width="wrap_content"
@@ -137,6 +136,14 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/passWord"/>
+            <CheckBox
+                    android:text="@string/remenber_me"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBox" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/passWordInput" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
