--- a/NuageAlarms/app/src/main/res/layout/activity_main.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,8 @@
                     android:layout_marginEnd="8dp"
                     style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
                     android:textSize="14sp"
-                    app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
-                    android:layout_width="81dp" android:layout_marginTop="24dp" android:layout_marginBottom="32dp"
+                    app:layout_constraintTop_toBottomOf="@+id/rememberMeCheck"
+                    android:layout_width="81dp" android:layout_marginTop="8dp" android:layout_marginBottom="32dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
                     android:text="@string/server_port"
@@ -103,6 +103,14 @@
                     android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
                     android:text="8443"
                     app:layout_constraintTop_toBottomOf="@+id/serverPort"/>
+            <CheckBox
+                    android:text="@string/remenber_me"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rememberMeCheck" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
