Started implementation of menu drawer.

--- a/NuageAlarms/app/src/main/res/layout/layout_filteritem.xml
+++ b/NuageAlarms/app/src/main/res/layout/layout_filteritem.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:scrollbars="horizontal">
@@ -15,7 +14,7 @@
 
             <TextView
                     android:text="TextView"
-                    android:layout_width="70dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="21dp"
                     android:id="@+id/entityText"
                     android:textSize="14sp"
@@ -28,7 +27,7 @@
                     app:layout_constraintHorizontal_bias="0.03" app:layout_constraintVertical_bias="0.0"/>
             <TextView
                     android:text="TextView"
-                    android:layout_width="302dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="21dp"
                     android:id="@+id/filterText"
                     app:layout_constraintStart_toEndOf="@+id/entityText"
