--- a/NuageAlarms/app/src/main/res/layout/layout_entityitem.xml
+++ b/NuageAlarms/app/src/main/res/layout/layout_entityitem.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content" android:id="@+id/entityItemLayout"
                                              android:scrollbars="horizontal">
@@ -19,12 +18,12 @@
                     android:id="@+id/entityId" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/entityName"
-                    android:textColor="@color/colorCommonText" android:layout_width="265dp"
+                    android:textColor="@color/colorCommonText" android:layout_width="wrap_content"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
             <TextView
                     android:text="TextView"
-                    android:layout_width="265dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/entityDescription"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +33,7 @@
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
             <TextView
                     android:text="TextView"
-                    android:layout_width="106dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/entityType" android:textSize="18sp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
@@ -44,15 +43,15 @@
                     app:layout_constraintVertical_bias="0.484"/>
             <TextView
                     android:text="TextView"
-                    android:layout_width="265dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/entityName"
                     app:layout_constraintTop_toBottomOf="@+id/entityId"
                     app:layout_constraintBottom_toTopOf="@+id/entityDescription"
                     app:layout_constraintVertical_bias="0.0"
                     android:textColor="@color/colorCommonText" app:layout_constraintStart_toEndOf="@+id/entityType"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"/>
+                    android:layout_marginStart="8dp"
+            />
         </android.support.constraint.ConstraintLayout>
     </HorizontalScrollView>
 </android.support.constraint.ConstraintLayout>
