--- a/NuageAlarms/app/src/main/res/values/colors.xml
+++ b/NuageAlarms/app/src/main/res/values/colors.xml
@@ -17,4 +17,11 @@
     <color name="colorDropDownBox">#000000</color>
     <color name="colorDropDownItemBackgroud">#3A3737</color>
     <color name="colorDropDownItemText">#C4B9B9</color>
+
+    <color name="CRITICAL">#4B0000</color>
+    <color name="MAJOR">#FA0101</color>
+    <color name="MINOR">#C23206</color>
+    <color name="WARNING">#C4A300</color>
+    <color name="INFO">#0B25EC</color>
+
 </resources>
