--- a/NuageAlarms/app/src/main/res/layout/activity_alarmlist.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_alarmlist.xml
@@ -24,7 +24,7 @@
                     android:scaleType="fitCenter"/>
 
             <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="56dp"
                     android:drawableEnd="@drawable/ic_dropdown_arrow"
                     android:text="@string/filters"
@@ -42,7 +42,8 @@
                     app:layout_constraintTop_toBottomOf="@+id/filterDropDown"
                     android:id="@+id/filtersConstraintLayout" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:visibility="gone">
+                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:visibility="gone"
+                    android:background="@drawable/filters_background" android:layout_marginTop="8dp">
 
                 <Button
                         android:layout_width="0dp"
@@ -64,7 +65,8 @@
                         android:id="@+id/enterprisesRecyclerView"
                         android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginEnd="8dp" android:visibility="gone"/>
+                        android:layout_marginEnd="8dp" android:visibility="gone"
+                        android:background="@drawable/entity_list_background"/>
                 <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -85,7 +87,8 @@
                         app:layout_constraintTop_toBottomOf="@+id/domainsDropDown" android:id="@+id/domainsRecyclerView"
                         app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                        android:visibility="gone"/>
+                        android:visibility="gone"
+                        android:background="@drawable/entity_list_background"/>
                 <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -106,7 +109,8 @@
                         app:layout_constraintTop_toBottomOf="@+id/zonesDropDown" android:id="@+id/zonesRecyclerView"
                         app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                        android:visibility="gone"/>
+                        android:visibility="gone"
+                        android:background="@drawable/entity_list_background"/>
                 <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -128,7 +132,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="8dp" android:id="@+id/vportsRecyclerView"
-                        android:visibility="gone"/>
+                        android:visibility="gone"
+                        android:background="@drawable/entity_list_background"/>
                 <android.support.constraint.ConstraintLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -174,8 +179,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/allAlarms" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:id="@+id/alarmRecyclerView"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/alarmRecyclerView" android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"/>
             <Button
                     android:text="@string/button_search"
                     android:textSize="14sp"
@@ -185,7 +191,8 @@
                     app:layout_constraintTop_toBottomOf="@+id/alarmRecyclerView" android:background="@color/colorButton"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    style="@style/Widget.AppCompat.Button.Colored"/>
+                    style="@style/Widget.AppCompat.Button.Colored" android:layout_marginBottom="32dp"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
