--- a/NuageAlarms/app/src/main/res/drawable/labels_background.xml
+++ b/NuageAlarms/app/src/main/res/drawable/labels_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/colorFiltersBackground"/>
+    <solid android:color="@color/colorBackground"/>
 
     <stroke
-            android:width="3dp"
-            android:color="@color/colorFiltersBackground"/>
+            android:width="5px"
+            android:color="#000000"/>
 
     <padding
             android:bottom="5dp"
@@ -13,6 +13,6 @@
             android:right="5dp"
             android:top="5dp"/>
 
-    <corners android:radius="5dp"/>
+    <corners android:radius="3dp"/>
 
 </shape>
