--- a/NuageAlarms/app/src/main/res/layout/activity_alarm_notifications.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_alarm_notifications.xml
@@ -16,9 +16,10 @@
                 android:layout_height="wrap_content">
 
             <ImageButton
-                    android:layout_width="61dp"
+                    android:layout_width="56dp"
                     android:layout_height="56dp" app:srcCompat="@drawable/ic_menu_button"
                     android:id="@+id/menuButton" android:backgroundTint="@color/colorBackground"
+                    android:tint="#000000"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                     android:scaleType="fitCenter"/>
@@ -32,18 +33,18 @@
                     android:textAlignment="textStart"
                     android:textSize="18sp"
                     android:id="@+id/filterDropDown" app:layout_constraintStart_toEndOf="@+id/menuButton"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:backgroundTint="@color/colorDropDownBox"
-                    app:layout_constraintHorizontal_bias="0.32"/>
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:backgroundTint="@color/colorDropDownFilters"
+                    android:layout_marginEnd="21dp" app:layout_constraintEnd_toEndOf="parent"/>
 
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    app:layout_constraintTop_toBottomOf="@+id/filterDropDown"
                     android:id="@+id/filtersConstraintLayout" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_height="wrap_content"
                     android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:visibility="gone"
-                    android:background="@drawable/filters_background" android:layout_marginTop="8dp">
+                    android:background="@drawable/filters_background"
+                    app:layout_constraintTop_toBottomOf="@+id/filterDropDown">
 
                 <Button
                         android:layout_width="0dp"
@@ -54,7 +55,7 @@
                         android:textAlignment="textStart"
                         android:textSize="18sp"
                         android:id="@+id/enterprisesDropDown"
-                        android:backgroundTint="@color/colorDropDownBox"
+                        android:backgroundTint="@color/colorDropDownFilters"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>
@@ -76,7 +77,7 @@
                         android:textAlignment="textStart"
                         android:textSize="18sp"
                         android:id="@+id/domainsDropDown"
-                        android:backgroundTint="@color/colorDropDownBox"
+                        android:backgroundTint="@color/colorDropDownFilters"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/enterprisesRecyclerView"/>
@@ -98,7 +99,7 @@
                         android:textAlignment="textStart"
                         android:textSize="18sp"
                         android:id="@+id/zonesDropDown"
-                        android:backgroundTint="@color/colorDropDownBox"
+                        android:backgroundTint="@color/colorDropDownFilters"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/domainsRecyclerView"/>
@@ -120,7 +121,7 @@
                         android:textAlignment="textStart"
                         android:textSize="18sp"
                         android:id="@+id/vportsDropDown"
-                        android:backgroundTint="@color/colorDropDownBox"
+                        android:backgroundTint="@color/colorDropDownFilters"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/zonesRecyclerView"
@@ -164,40 +165,21 @@
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.constraint.ConstraintLayout>
-            <TextView
+            <Button
+                    android:text="@string/button_save"
+                    android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/allAlarms" android:textSize="18sp"
-                    android:text="@string/existing_alarms" android:textColor="@color/colorCommonText"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/filtersConstraintLayout"
-            />
-            <android.support.v7.widget.RecyclerView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/allAlarms" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/alarmRecyclerView" android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"/>
-            <Button
-                    android:text="@string/button_search"
-                    android:textSize="14sp"
-                    android:layout_width="81dp"
-                    android:layout_height="38dp"
-                    android:id="@+id/searchButton" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/alarmRecyclerView" android:background="@color/colorButton"
+                    android:id="@+id/saveButton"
+                    android:background="@color/colorButton"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     style="@style/Widget.AppCompat.Button.Colored" android:layout_marginBottom="32dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/filtersConstraintLayout" android:layout_marginTop="8dp"/>
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
-
-
     <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -208,5 +190,4 @@
             app:itemTextColor="@color/colorMenuText"
             app:itemIconTint="@color/colorMenuText"
     />
-
 </android.support.v4.widget.DrawerLayout>
