--- a/NuageAlarms/app/src/main/res/layout/activity_settings.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_settings.xml
@@ -14,53 +14,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:id="@+id/passWordInput2"
-                    android:text="JMh1aGt39uGwktc8"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/passWord" app:layout_constraintHorizontal_bias="0.0"/>
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/userNameInput2"
-                    android:hint="@string/username_hint"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/userName" app:layout_constraintHorizontal_bias="0.0"/>
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/companyNameInput2"
-                    android:hint="@string/companyname_hint"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/companyName" app:layout_constraintHorizontal_bias="0.0"/>
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/serverPortInput2" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
-                    app:layout_constraintTop_toBottomOf="@+id/serverPort"
-                    app:layout_constraintHorizontal_bias="0.0"/>
             <TextView
                     android:text="@string/header_settings"
-                    android:textColor="@color/colorMenuText"
+                    android:textColor="@color/colorSettingsItemText"
+                    android:paddingStart="5dp"
                     android:background="@color/colorHeaderBackground"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -68,63 +25,160 @@
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:textSize="40sp"/>
             <TextView
+                    android:text="@string/settings_server"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/accountSubTitle" android:textSize="30sp"
+                    android:textColor="@color/colorSettingsItemText" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/headerTextView"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"/>
+            <TextView
                     android:text="@string/server_name_ip"
                     android:layout_width="wrap_content"
-                    android:layout_height="32dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/serverNameIp" android:textSize="24sp"
-                    android:textColor="@color/colorMenuText"
+                    android:textColor="@color/colorSettingsItemText"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    tools:layout_editor_absoluteY="86dp"/>
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/accountSubTitle"/>
             <EditText
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/serverNameIpInput2" android:layout_marginStart="8dp"
+                    android:id="@+id/serverNameIpInput" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:hint="@string/name_ip_input"
                     android:textStyle="italic"
                     app:layout_constraintTop_toBottomOf="@+id/serverNameIp"
-                    app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:textColor="@color/colorNuageCommonText"
+                    android:textColorHint="@color/colorNuageCommonHintText"
+                    android:backgroundTint="@color/colorNuageCommonText"
+            />
             <TextView
                     android:text="@string/server_port"
                     android:layout_width="wrap_content"
-                    android:layout_height="32dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/serverPort" android:textSize="24sp"
-                    android:textColor="@color/colorMenuText"
+                    android:textColor="@color/colorSettingsItemText"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    tools:layout_editor_absoluteY="188dp" app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/serverNameIpInput"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/serverPortInput" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
+                    app:layout_constraintTop_toBottomOf="@+id/serverPort"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:textColor="@color/colorNuageCommonText"
+                    android:textColorHint="@color/colorNuageCommonHintText"
+                    android:backgroundTint="@color/colorNuageCommonText"/>
+            <TextView
+                    android:text="@string/settings_account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/serverSubTitle" android:textSize="30sp"
+                    android:textColor="@color/colorSettingsItemText" android:layout_marginTop="32dp"
+                    app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"/>
             <TextView
                     android:text="@string/companyname"
                     android:layout_width="wrap_content"
-                    android:layout_height="32dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/companyName" android:textSize="24sp"
-                    android:textColor="@color/colorMenuText"
+                    android:textColor="@color/colorSettingsItemText"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    tools:layout_editor_absoluteY="335dp" app:layout_constraintHorizontal_bias="0.0"/>
-            <TextView
-                    android:text="@string/password"
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/serverSubTitle"/>
+            <EditText
                     android:layout_width="wrap_content"
-                    android:layout_height="33dp"
-                    android:id="@+id/passWord" android:textSize="24sp"
-                    android:textColor="@color/colorMenuText"
-                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    tools:layout_editor_absoluteY="533dp" app:layout_constraintHorizontal_bias="0.0"/>
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/companyNameInput"
+                    android:hint="@string/companyname_hint"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/companyName" app:layout_constraintHorizontal_bias="0.0"
+                    android:textColor="@color/colorNuageCommonText"
+                    android:textColorHint="@color/colorNuageCommonHintText"
+                    android:backgroundTint="@color/colorNuageCommonText"/>
             <TextView
                     android:text="@string/username"
                     android:layout_width="wrap_content"
-                    android:layout_height="33dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/userName" android:textSize="24sp"
-                    android:textColor="@color/colorMenuText"
+                    android:textColor="@color/colorSettingsItemText"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    tools:layout_editor_absoluteY="433dp" app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/companyNameInput"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/userNameInput"
+                    android:hint="@string/username_hint"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/userName" app:layout_constraintHorizontal_bias="0.0"
+                    android:textColor="@color/colorNuageCommonText"
+                    android:textColorHint="@color/colorNuageCommonHintText"
+                    android:backgroundTint="@color/colorNuageCommonText"/>
+            <TextView
+                    android:text="@string/password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/passWord" android:textSize="24sp"
+                    android:textColor="@color/colorSettingsItemText"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/userNameInput"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:id="@+id/passWordInput"
+                    android:text="JMh1aGt39uGwktc8"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/passWord" app:layout_constraintHorizontal_bias="0.0"
+                    android:textColor="@color/colorNuageCommonText"
+                    android:textColorHint="@color/colorNuageCommonHintText"
+                    android:backgroundTint="@color/colorNuageCommonText"/>
+            <Button
+                    android:text="@string/button_save"
+                    android:layout_height="38dp"
+                    android:id="@+id/saveButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
+                    android:textSize="14sp"
+                    android:layout_width="81dp" android:layout_marginBottom="32dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/passWordInput" android:layout_marginTop="16dp"
+                    app:layout_constraintHorizontal_bias="0.0"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
