--- a/NuageAlarms/app/src/main/res/layout/layout_filters.xml
+++ b/NuageAlarms/app/src/main/res/layout/layout_filters.xml
@@ -13,7 +13,7 @@
             android:textAlignment="textStart"
             android:textSize="18sp"
             android:id="@+id/enterprisesDropDown"
-            android:backgroundTint="@color/colorDropDownBox"
+            android:backgroundTint="@color/colorDropDownFilters"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -27,7 +27,7 @@
             android:textAlignment="textStart"
             android:textSize="18sp"
             android:id="@+id/domainsDropDown"
-            android:backgroundTint="@color/colorDropDownBox"
+            android:backgroundTint="@color/colorDropDownFilters"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/enterprisesDropDown"/>
@@ -41,7 +41,7 @@
             android:textAlignment="textStart"
             android:textSize="18sp"
             android:id="@+id/zonesDropDown"
-            android:backgroundTint="@color/colorDropDownBox"
+            android:backgroundTint="@color/colorDropDownFilters"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/domainsDropDown"/>
@@ -55,7 +55,7 @@
             android:textAlignment="textStart"
             android:textSize="18sp"
             android:id="@+id/vportsDropDown"
-            android:backgroundTint="@color/colorDropDownBox"
+            android:backgroundTint="@color/colorDropDownFilters"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/zonesDropDown"/>
