--- a/NuageAlarms/app/src/main/res/layout/activity_login.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_login.xml
@@ -130,7 +130,7 @@
                     android:inputType="textPassword"
                     android:ems="10"
                     android:id="@+id/passWordInput"
-                    android:text="f2QL9JYbnD6R479y"
+                    android:text="JZnMqIhDSlnlHYXH"
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
